--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,12 @@
 #base.url = https://localhost:8443/
-base.url = https://sok.grid.cyfronet.pl
+#base.url = https://sok.grid.cyfronet.pl
+base.url = http://149.156.182.112:8080/geoserver/development
 
 #test config
-users.number = 20
-users.time.period = 18
+users.number = 700
+users.time.period = 25
+repeat.scenario = 10
+
+reps.reach = 10
+reps.in.time = 25
+reps.for.time = 10
