--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,14 @@
 #base.url = https://localhost:8443/
-#base.url = https://sok.grid.cyfronet.pl
-base.url = http://149.156.182.112:8080/geoserver/development
+base.url = https://sok.grid.cyfronet.pl
+#base.url = http://149.156.182.112:8080/geoserver/development
+#base.url = http://localhost:8080/geoserver/development
 
 #test config
-users.number = 700
+users.number = 600
 users.time.period = 25
 repeat.scenario = 10
+layer.name=sentinel_1_grdh
 
-reps.reach = 10
+reps.reach = 20
 reps.in.time = 25
-reps.for.time = 10
+reps.for.time = 5
