Added conditions to s3Download and GS Scenarios
- Condition for forcing file download
- Check 200 (OK) and response size

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 #base.url = https://localhost:8443/
-base.url = https://sok.grid.cyfronet.pl
-#base.url = http://149.156.182.112:8080/geoserver/development
+#base.url = https://sok.grid.cyfronet.pl
+base.url = http://149.156.182.112:8080/geoserver/development
 #base.url = http://localhost:8080/geoserver/development
 
 #test config
@@ -8,7 +8,8 @@ users.number = 600
 users.time.period = 25
 repeat.scenario = 10
 layer.name=sentinel_1_grdh
+s3.force.download=false
 
-reps.reach = 20
+reps.reach = 10
 reps.in.time = 25
-reps.for.time = 5
+reps.for.time = 10
