Scenario with grdh grdm and slc close-ups

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,8 @@
 #base.url = https://sok.grid.cyfronet.pl
 base.url = http://149.156.182.112:8080/geoserver/development
 #base.url = http://localhost:8080/geoserver/development
+web.base.url = https://sok.grid.cyfronet.pl
+gs.base.url = http://149.156.182.112:8080/geoserver/development
 
 #test config
 users.number = 600
@@ -10,6 +12,6 @@ repeat.scenario = 10
 layer.name=sentinel_1_grdh
 s3.force.download=false
 
-reps.reach = 10
+reps.reach = 20
 reps.in.time = 25
 reps.for.time = 10
